# excalibur-mcp

./: .deploy-trigger  .fastmcp.yaml  .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  fastmcp.json  pyproject.toml  server.json
.github/workflows/: ci.yml  deploy-frontend.yml  deploy-worker.yml
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/functions/: mcp.js
frontend/public/: llms.txt
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Avatar.tsx  AvatarPicker.tsx  BuildLicensePanel.tsx  ContentEditorPage.tsx  CouponsPanel.tsx  DebugPanel.tsx  ErrorBoundary.tsx  Hero.tsx  Nav.tsx  NostrProfilePanel.tsx  NpubGate.tsx  PagedTable.tsx  PostEditorPage.tsx  PostsPage.tsx  ProfilePage.tsx  QuoteScroller.tsx  SchedulerHealth.tsx  SchedulerPage.tsx  SchedulerPendingCard.tsx  SnippetsPage.tsx  TableFilter.tsx  TweetPreviewModal.tsx  WalletPage.tsx  XConnectPanel.tsx
frontend/src/lib/: avatar.ts  claude.ts  debugLog.ts  editorDoc.ts  inlineProof.ts  mcp.ts  nostrProfile.ts  postDraft.ts  schedulerPending.ts  sessionNsec.ts  snippets.ts  theme.ts  unicodeFormat.ts  xProfile.ts
scheduler-worker/: README.md  package-lock.json  package.json  wrangler.toml
scheduler-worker/src/: index.ts
src/excaliber_mcp/: config.py  formatter.py  server.py  x_client.py
src/excalibur_mcp/: __init__.py  actor.py  config.py  formatter.py  infographic.py  oauth_flow.py  refine.py  resolve.py  scheduler.py  server.py  vault.py  x_client.py
src/excalibur_mcp/db/: __init__.py  neon.py  posts.py  scheduler_runs.py  snippets.py  voices.py
src/excalibur_mcp/db/migrations/: 0001_initial.sql
src/excalibur_mcp/tools/: __init__.py  _filters.py  posts.py  snippets.py  voices.py
tests/: test_actor.py  test_credit_gating.py  test_formatter.py  test_health.py  test_infographic.py  test_posts_db.py  test_posts_tools.py  test_refine.py  test_resolve.py  test_resolve_runner.py  test_scheduler.py  test_scheduler_runs_db.py  test_secure_courier.py  test_session_resolution.py  test_snippets_db.py  test_snippets_tools.py  test_voices_db.py  test_voices_tools.py  test_x_client.py
